# LearningVulkan

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
THIRD_PARTY_LICENSES/: cmake-bsd-3-clause.txt
VulkanProjects/Tutorial/: CMakeLists.txt  cmake_build.sh
VulkanProjects/Tutorial/include/: Application.h  ApplicationWindow.h  FrameBufferSize.h  IRequiredVulkanExtensionsProvider.h  Logger.h  Pixel.h  PlacementStackAllocator.h  RequiredVulkanExtensionsProvider.h  ResourceManagement.h  Span.h  SpanAllocator.h  SpanView.h  SwapChainImageCountPreference.h  SwapChainImageCountSelectStrategy.h  SwapChainPresentModePreference.h  SwapChainPresentModeRequirements.h  SwapChainVulkanSurfaceExtentPreference.h  SwapChainVulkanSurfaceExtentRequirements.h  SwapChainVulkanSurfaceFormatPreference.h  SwapChainVulkanSurfaceFormatRequirements.h  VulkanClient.h  VulkanDeviceQueue.h  VulkanInstance.h  VulkanLogicalDevice.h  VulkanLogicalDeviceCreationStrategy.h  VulkanPhysicalDevice.h  VulkanPhysicalDeviceAPIVersionRequirements.h  VulkanPhysicalDeviceExtensionsRequirements.h  VulkanPhysicalDeviceFeatureRequirements.h  VulkanPhysicalDeviceQueueFamilyRequirements.h  VulkanPhysicalDeviceSelectionStrategy.h  VulkanSurface.h  VulkanSwapChain.h  VulkanSwapChainCreateStrategy.h  WindowRequiredVulkanExtensionsProvider.h  WindowRequriedVulkanExtensionsProvider.h
VulkanProjects/Tutorial/include/Debug/: Logger.h
VulkanProjects/Tutorial/include/Graphics/: FrameBufferSize.h  IVkSurfaceKHRResourceAcquisition.h  RequiredVulkanInstanceLayerProvider.h  SwapChainPresentModePreference.h  SwapChainVulkanSurfaceExtentPreference.h  VulkanDeviceQueue.h  VulkanInstance.h  VulkanInstanceCreationStrategy.h  VulkanInstanceReadModel.h  VulkanLogicalDevice.h  VulkanLogicalDeviceCreationStrategy.h  VulkanPhysicalDevice.h  VulkanPhysicalDeviceAPIVersionRequirements.h  VulkanPhysicalDeviceExtensionsRequirements.h  VulkanPhysicalDeviceFeatureRequirements.h  VulkanPhysicalDeviceQueueFamilyRequirements.h  VulkanPhysicalDeviceSelectionStrategy.h  VulkanSurface.h  VulkanSwapChain.h  VulkanSwapChainCreateStrategy.h
VulkanProjects/Tutorial/include/ResourceManagement/: Alias.h  Borrowed.h  DynamicArray.h  OwnerShip.h  ResourcePtrConcept.h
VulkanProjects/Tutorial/include/ResourceManagement/Memory/: AlignedContinuousMemoryBlock.h  Alignment.h  BuddyAllocator.h  BumpAllocator.h  Bytes.h  ContinuousMemoryBlockPool.h  LargeSizeAllocator.h  MemoryBlock.h  MemoryConstants.h  OsMemory.h
VulkanProjects/Tutorial/include/ResourceManagement/Memory/BuddyAlloc/: AlignedBuddyAllocator.h  ArenaState.h  BuddyAllocator.h  BuddyBlockIndex.h  BuddyFreeBitmap.h  BuddyOrder.h  BuddyOrderThreshold.h  FreeBlock.h
VulkanProjects/Tutorial/include/ResourceManagement/Memory/BumpAlloc/: AlignedArena.h  BumpAllocator.h
VulkanProjects/Tutorial/include/WindowHelper/: ApplicationWindow.h  GlfwWindowSurfaceResourceAcquisition.h  WindowRequiredVulkanExtensionsProvider.h
VulkanProjects/Tutorial/src/: Application.cpp  ApplicationWindow.cpp  FrameBufferSize.cpp  Pixel.cpp  PlacementStackAllocator.cpp  RequiredVulkanExtensionsProvider.cpp  Span.cpp  SpanAllocator.cpp  SpanView.cpp  SwapChainImageCountPreference.cpp  SwapChainImageCountSelectStrategy.cpp  SwapChainPresentModePreference.cpp  SwapChainPresentModeRequirements.cpp  SwapChainVulkanSurfaceExtentPreference.cpp  SwapChainVulkanSurfaceExtentRequirements.cpp  SwapChainVulkanSurfaceFormatPreference.cpp  SwapChainVulkanSurfaceFormatRequirements.cpp  VulkanClient.cpp  VulkanDeviceQueue.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanLogicalDeviceCreationStrategy.cpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDeviceAPIVersionRequirements.cpp  VulkanPhysicalDeviceExtensionsRequirements.cpp  VulkanPhysicalDeviceFeatureRequirements.cpp  VulkanPhysicalDeviceQueueFamilyRequirements.cpp  VulkanPhysicalDeviceSelectionStrategy.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanSwapChainCreateStrategy.cpp  WindowRequiredVulkanExtensionsProvider.cpp  main.cpp
VulkanProjects/Tutorial/src/Graphics/: FrameBufferSize.cpp  Pixel.cpp  RequiredVulkanInstanceLayerProvider.cpp  SwapChainImageCountPreference.cpp  SwapChainPresentModePreference.cpp  SwapChainVulkanSurfaceExtentPreference.cpp  SwapChainVulkanSurfaceFormatPreference.cpp  VulkanDeviceQueue.cpp  VulkanInstance.cpp  VulkanInstanceCreationStrategy.cpp  VulkanInstanceReadModel.cpp  VulkanLogicalDevice.cpp  VulkanLogicalDeviceCreationStrategy.cpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDeviceAPIVersionRequirements.cpp  VulkanPhysicalDeviceExtensionsRequirements.cpp  VulkanPhysicalDeviceFeatureRequirements.cpp  VulkanPhysicalDeviceQueueFamilyRequirements.cpp  VulkanPhysicalDeviceSelectionStrategy.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanSwapChainCreateStrategy.cpp
VulkanProjects/Tutorial/src/ResourceManagement/: Borrowed.cpp  DynamicArray.cpp  OwnerShip.cpp  ResourcePtrConcept.cpp
VulkanProjects/Tutorial/src/ResourceManagement/Memory/: AlignedContinuousMemoryBlock.cpp  Alignment.cpp  BuddyAllocator.cpp  BumpAllocator.cpp  Bytes.cpp  ContinuousMemoryBlockPool.cpp  LargeSizeAllocator.cpp  MemoryConstants.cpp  OsMemory.cpp
VulkanProjects/Tutorial/src/ResourceManagement/Memory/BuddyAlloc/: AlignedBuddyAllocator.cpp  ArenaState.cpp  BuddyAllocator.cpp  BuddyBlockIndex.cpp  BuddyFreeBitmap.cpp  BuddyOrder.cpp
VulkanProjects/Tutorial/src/ResourceManagement/Memory/BumpAlloc/: BumpAllocator.cpp
VulkanProjects/Tutorial/src/WindowHelper/: ApplicationWindow.cpp  GlfwWindowSurfaceResourceAcquisition.cpp  WindowRequiredVulkanExtensionsProvider.cpp
VulkanProjects/Tutorial/tests/: ResourceManagementSelfTest.cpp
docs/: alloc_strategy.md  os-memory-syscalls.md
